test/testdata/classes/inheritance/super_blank_field_access_error.lox
class Superclass {}

class Subclass < Superclass {
  method() {
    // error: _ cannot be used as a field name
    // lint error: _ cannot be used as a field name
    super._;
  }
}

var subclass = Subclass();
subclass.method();
